分布式配置中心：配置中心注册到eureka上

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>sc-f-chapter1</name>
+    <name>sc-f-chapter</name>
     <description>Demo project for Spring Boot</description>
 
     <parent>
